# vkswr

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml  vk.xml
codegen/src/: codegen.rs  lib.rs  vk_xml.rs
common/: Cargo.toml
common/src/: graphics.rs  lib.rs  math.rs
gpu/: Cargo.toml
gpu/src/: consts.rs  gpu.rs  graphics_pipeline.rs  lib.rs  memory.rs  rasterization.rs  shader.rs  spirv.rs  texel.rs  vector.rs
gpu/src/shader/: glsl.rs  il.rs  interpreter.rs  mod.rs  shader.rs  spirv.rs
headers/: Cargo.toml  build.rs
headers/src/: lib.rs  vk.rs  vk_decls.rs  vk_defs.rs
icd/: Cargo.toml  build.rs
icd/src/: buffer.rs  codegen.rs  command_buffer.rs  descriptor.rs  image.rs  impls.rs  lib.rs  memory.rs  pipeline.rs  sampler.rs  surface.rs  swapchain.rs
runtime/: Cargo.toml
runtime/src/: buffer.rs  command_buffer.rs  context.rs  descriptor.rs  fence.rs  image.rs  instance.rs  lib.rs  logical_device.rs  memory.rs  physical_device.rs  pipeline.rs  queue.rs  sampler.rs  semaphore.rs  surface.rs  swapchain.rs
shader/: Cargo.toml
shader/src/: glsl.rs  il.rs  interpreter.rs  lib.rs  spirv.rs
src/: lib.rs
test_suite/: Cargo.toml
test_suite/tests/: integration_tests.rs
test_suite/tests/common/: mod.rs
tests/: integration_tests.rs  tests.rs
tests/common/: mod.rs
