[workspace]
resolver = "2"

members = [
    "icd",
    "test_suite",
    "codegen",
    "runtime",
    "gpu"
]

[workspace.dependencies]
thiserror = "1.0.40"
lazy_static = "1.4.0"
log = "0.4.18"
env_logger = "0.10.0"
parking_lot = "0.12.1"
xcb = "1.2.1"
itertools = "0.11.0"
rustversion = "1.0.14"
assert_fs = "1.0.13"
anyhow = "1.0.79"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.lints.clippy]
unwrap_used = "forbid"
nursery = "deny"
correctness = "deny"
style = "deny"
cognitive-complexity = "allow"
missing_safety_doc = "allow"
