[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.28.2", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.163", features = ["derive"] }
quote = "1.0.28"
proc-macro2 = "1.0.59"
parse_int = "0.6.0"
thiserror = { workspace = true }
phf = { version = "0.11.1", features = ["macros"] }
