[package]
name = "headers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
log = { workspace = true }
xcb = { workspace = true }
lazy_static = { workspace = true }
gpu = { path = "../gpu" }

[build-dependencies]
codegen = { path = "../codegen" }

[lints]
workspace = true
