[package]
name = "headers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
gpu = { path = "../gpu" }
common = { path = "../common" }
log = { workspace = true }
xcb = { workspace = true }
lazy_static = { workspace = true }

[build-dependencies]
codegen = { path = "../codegen" }

[lints]
workspace = true
