[package]
name = "icd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
headers = { path = "../headers" }
runtime = { path = "../runtime" }
env_logger = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }

[dev-dependencies]
libloading = "0.8.0"
assert_fs = "1.0.13"

[build-dependencies]
rustversion = { workspace = true }

[lints]
workspace = true
