[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
headers = { path = "../headers" }
gpu = { path = "../gpu" }
lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
xcb = { workspace = true }
itertools = { workspace = true }
