[package]
name = "shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
rspirv = "0.11.0"

[dev-dependencies]
assert_fs = { workspace = true }

[lints]
workspace = true
